--- a/publication.html
+++ b/publication.html
@@ -65,7 +65,7 @@
 		
                                 
                               <ol class="gradient-list">
-				<h3> <span class="label label-default">Journals (11)</span></h3>
+				<h3> <span class="label label-default">Journals</span></h3>
 				<hr>
 
 				 <li><p class="subDetails"> A. Hazra, <b> A. Kalita</b>, and M. Gurusamy, “Meeting the Requirements of Internet of Things: The Promise of Edge Computing” in <b> IEEE Internet of Things Journal</b>, 2023, (Accepted). <a href="https://ieeexplore.ieee.org/abstract/document/10342693"><img src="assets/images/pdf.png" width="18" height="18"/></a> <blink style="color:red"> New</blink></p></li>       		   
@@ -81,7 +81,7 @@
                                   <li><p class="subDetails"><b> A. Kalita</b> and M. Khatua, “Channel Condition Based Dynamic Beacon Interval for Faster Formation of 6TiSCH Network” in <b> IEEE Transactions on Mobile Computing</b>, IF=7.9, vol. 20, no. 7, pp. 2326–2337, 2021. <a href="https://ieeexplore.ieee.org/document/9036988"><img src="assets/images/pdf.png" width="18" height="18"/></a></p></li>      
 			      </ol> 
 			      <ol class="gradient-list">
-				<h3> <span class="label label-default">Conferences (12)</span></h3>
+				<h3> <span class="label label-default">Conferences</span></h3>
 				<hr>
 				<li><p class="subDetails">  P. Joshi, <b> A. Kalita</b>,  M. Gurusamy, “Securing the Skies: An IRS-Assisted AoI-Aware Secure Multi-UAV System with Efficient Task Offloading” in IEEE 99th Vehicular Technology Conference (VTC'2024), <blink style="color:red">Accepted</blink></p></li>  
 				      
